docs/7.57/md/abapsum_extract.md
---
title: "Obsolete Syntax"
description: |
  ... sum(field) .... Effect For the fields field1, field2, ... of the field groups of an extract dataset(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenextract_dataset_glosry.htm 'Glossary Entry'), data objects named sum(field1), sum(field2), ... of the same data type as field1, fie
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapsum_extract.htm"
abapFile: "abapsum_extract.htm"
keywords: ["loop", "do", "if", "try", "catch", "data", "abapsum", "extract"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_obsolete.htm) →  [Obsolete Processing of Internal Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendata_internal_obsolete.htm) →  [Obsolete Extracts](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_extracts_extended.htm) →  [AT, Extract](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapat_extract.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: sum\( \), ABAPSUM_EXTRACT, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for
improvement:)

sum( )

Obsolete Syntax

... sum(field) ....

Effect

For the fields field1, field2, ... of the field groups of an [extract dataset](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenextract_dataset_glosry.htm "Glossary Entry"), data objects named sum(field1), sum(field2), ... of the same data type as field1, field2, ... are created automatically. These fields can be accessed only within a LOOP and are filled with values for sorted extract datasets using the statements [AT END OF](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapat_extract.htm) and [AT LAST](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapat_extract.htm): If field1, field2, ... are fields with numeric data type, sum(field1), sum(field2), ... contain the total of the values of field1, field2, ... within the group level or the entire dataset.

If the fields sum(field1), sum(field1), ... are accessed without first sorting the extract dataset, an uncatchable exception can be raised.

Hints

-   No [substring access](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenoffset_length.htm) sum(len) can be made on a data object called sum without an explicit offset specification. The compiler always interprets an offset specified like this as a field for an extract dataset.
-   No [customizing include](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencustomizing_include_glosry.htm "Glossary Entry") may be specified for field if it is empty.